--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,16 @@ server.port=8888
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/short_urls
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=111
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=0
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
 
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+
