--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.6'
     implementation 'org.postgresql:postgresql:42.5.4'
     implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.10'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+    implementation 'org.flywaydb:flyway-core:9.16.0'
     developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.6'
     runtimeOnly 'org.springframework.boot:spring-boot-configuration-processor:3.0.4'
     runtimeOnly 'com.h2database:h2:2.1.214'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compileOnly 'org.projectlombok:lombok:1.18.26'
+    annotationProcessor 'org.projectlombok:lombok:1.18.26'
+
 
 }
 
