--- a/build.gradle
+++ b/build.gradle
@@ -15,17 +15,27 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-redis:1.4.7.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.6'
     implementation 'org.postgresql:postgresql:42.5.4'
     implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.10'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
     implementation 'org.flywaydb:flyway-core:9.16.0'
+    implementation 'io.lettuce:lettuce-core:'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'com.auth0:java-jwt:4.3.0'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.6'
     runtimeOnly 'org.springframework.boot:spring-boot-configuration-processor:3.0.4'
     runtimeOnly 'com.h2database:h2:2.1.214'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 
 
 }
