--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,9 @@ dependencies {
     implementation 'com.auth0:java-jwt:4.3.0'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.security:spring-security-oauth2-jose'
+    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
     developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.6'
     runtimeOnly 'org.springframework.boot:spring-boot-configuration-processor:3.0.4'
     runtimeOnly 'com.h2database:h2:2.1.214'
