update rate limiter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,14 @@ server.port=8888
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+spring.cache.type=redis
+spring.cache.redis.cache-null-values=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+redis.host=localhost
+redis.port=6379
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/simpsite
 spring.datasource.username=postgres
 spring.datasource.password=111
 spring.jpa.hibernate.ddl-auto=update
@@ -16,6 +22,8 @@ spring.flyway.locations=classpath:db/migration
 spring.security.oauth2.client.registration.github.client-id=be7bfb50c3705dd8ec52
 spring.security.oauth2.client.registration.github.client-secret=903d53e7639626032358b7e56a5976a3c201f4fe
 
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/simpsiteDev/protocol/openid-connect/certs
 
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
 
