--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.10'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
     implementation 'org.flywaydb:flyway-core:9.16.0'
-    implementation 'io.lettuce:lettuce-core:'
+//    implementation 'io.lettuce:lettuce-core:'
+    implementation 'redis.clients:jedis:4.2.3'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'com.auth0:java-jwt:4.3.0'
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -29,7 +30,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.security:spring-security-oauth2-jose'
     implementation 'org.springframework.security:spring-security-oauth2-resource-server'
-
     developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.6'
     runtimeOnly 'org.springframework.boot:spring-boot-configuration-processor:3.0.4'
     runtimeOnly 'com.h2database:h2:2.1.214'
@@ -40,6 +40,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+    implementation 'com.google.guava:guava:31.0.1-jre'
 
 
 }
