--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'org.springframework.security:spring-security-oauth2-jose'
     implementation 'org.springframework.security:spring-security-oauth2-resource-server'
     developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.6'
-    runtimeOnly 'org.springframework.boot:spring-boot-configuration-processor:3.0.4'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:3.0.4'
     runtimeOnly 'com.h2database:h2:2.1.214'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
@@ -39,7 +39,6 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
-    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     implementation 'com.google.guava:guava:31.0.1-jre'
 
 
